@@ -261,6 +261,10 @@ if (isset ($_POST['maj'])) {
         require 'updates/170_to_171.inc.php';
 	}
 
+	if (($force_maj == 'yes') or (quelle_maj("master"))) {
+        require 'updates/171_to_dev.inc.php';
+	}
+
 	// Mise à jour du numéro de version
 	saveSetting("version", $gepiVersion);
 	saveSetting("pb_maj", $pb_maj);
